Fix 'add code comment' button being invisible all the time

--- a/web_src/less/_review.less
+++ b/web_src/less/_review.less
@@ -13,6 +13,7 @@
   transform: scale(1, 1);
 
   &:hover {
+    opacity: 1;
     transform: scale(1.2, 1.2);
   }
 }
